# st_workflow

./: README.md  pyproject.toml  pytest.ini  test_workflow.py  workflow.py
st_workflow/: __init__.py
tests/: test_workflow.py
usecases/: web_scraping.md
workflow/: __init__.py
