[tool.poetry]
name = "st-workflow"
version = "0.1.1"
description = ""
authors = ["Reza Safari <rsafari.s@gmail.com>"]
readme = "README.md"
packages = [
  { include = "workflow/*.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
