[tool.poetry]
name = "st-workflow"
version = "0.1.7"
description = "Library for creating workflows in Python"
authors = ["Reza Safari <rsafari.s@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/safari12/st-workflow"
packages = [
  { include = "workflow/*.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
