[tool.poetry]
name = "st_workflow"
version = "0.1.9"
description = "Library for creating complex workflows in Python"
authors = ["Reza Safari <rsafari.s@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/safari12/st_workflow"
packages = [
  { include = "st_workflow/*.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
